--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start" : "node src/server.js"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@clerk/express": "^1.7.68",
+    "cloudinary": "^2.9.0",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.1.5"
   }
 }
